--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>com.citics.cdh</groupId>
     <artifactId>CrmRealtimeClientOutline</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
 
     <properties>
         <scala.version>2.10.5</scala.version>
         <spark.version>1.6.0</spark.version>
-        <hbase.version>1.2.0</hbase.version>
+        <hbase.version>1.2.0-cdh5.12.0</hbase.version>
         <slf4j.version>1.7.25</slf4j.version>
         <json4s.version>3.2.10</json4s.version>
     </properties>
