--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.citics.cdh</groupId>
     <artifactId>CrmRealtimeClientOutline</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.4-SNAPSHOT</version>
 
     <properties>
         <scala.version>2.10.5</scala.version>
@@ -121,6 +121,16 @@
             <groupId>com.databricks</groupId>
             <artifactId>spark-avro_2.10</artifactId>
             <version>1.1.0-cdh5.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>bijection-avro_2.10</artifactId>
+            <version>0.9.2</version>
         </dependency>
     </dependencies>
 
